import org.jetbrains.changelog.Changelog
import org.jetbrains.changelog.markdownToHTML
import org.jetbrains.intellij.platform.gradle.TestFrameworkType

plugins {
	id("java")
	alias(libs.plugins.kotlin)
	alias(libs.plugins.intelliJPlatform)
	alias(libs.plugins.changelog)
	alias(libs.plugins.qodana)
	alias(libs.plugins.kover)
}

group = providers.gradleProperty("pluginGroup").get()
version = providers.gradleProperty("pluginVersion").get()

kotlin {
	jvmToolchain(21)
}

repositories {
	mavenCentral()

	// https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-repositories-extension.html
	intellijPlatform {
		defaultRepositories()
	}
}

// https://docs.gradle.org/current/userguide/version_catalogs.html
dependencies {
	testImplementation(libs.junit)
	testImplementation(libs.opentest4j)

	// https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-dependencies-extension.html
	intellijPlatform {
		intellijIdea(providers.gradleProperty("platformVersion"))

		bundledPlugins(providers.gradleProperty("platformBundledPlugins").map { it.split(',') })
		plugins(providers.gradleProperty("platformPlugins").map { it.split(',') })
		bundledModules(providers.gradleProperty("platformBundledModules").map { it.split(',') })
		testFramework(TestFrameworkType.Platform)
	}
}

// https://plugins.jetbrains.com/docs/intellij/tools-intellij-platform-gradle-plugin-extension.html
intellijPlatform {
	pluginConfiguration {
		name = providers.gradleProperty("pluginName")
		version = providers.gradleProperty("pluginVersion")

		// Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
		description = providers.fileContents(layout.projectDirectory.file("README.md")).asText.map {
			val start = "<!-- Plugin description -->"
			val end = "<!-- Plugin description end -->"

			with(it.lines()) {
				if (!containsAll(listOf(start, end))) {
					throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
				}
				subList(indexOf(start) + 1, indexOf(end)).joinToString("\n").let(::markdownToHTML)
			}
		}

		val changelog = project.changelog // local variable for configuration cache compatibility
		// Get the latest available change notes from the changelog file
		changeNotes = providers.gradleProperty("pluginVersion").map { pluginVersion ->
			with(changelog) {
				renderItem(
					(getOrNull(pluginVersion) ?: getUnreleased())
						.withHeader(false)
						.withEmptySections(false),
					Changelog.OutputType.HTML,
				)
			}
		}

		ideaVersion {
			sinceBuild = providers.gradleProperty("pluginSinceBuild")
		}
	}

	signing {
		certificateChain = providers.environmentVariable("CERTIFICATE_CHAIN")
		privateKey = providers.environmentVariable("PRIVATE_KEY")
		password = providers.environmentVariable("PRIVATE_KEY_PASSWORD")
	}

	publishing {
		token = providers.environmentVariable("PUBLISH_TOKEN")
		// The pluginVersion is based on the SemVer (https://semver.org) and supports pre-release labels, like 2.1.7-alpha.3
		// Specify pre-release label to publish the plugin in a custom Release Channel automatically. Read more:
		// https://plugins.jetbrains.com/docs/intellij/publishing-plugin.html#specifying-a-release-channel
		channels = providers.gradleProperty("pluginVersion")
			.map { listOf(it.substringAfter('-', "").substringBefore('.').ifEmpty { "default" }) }
	}

	pluginVerification {
		ides {
			recommended()
		}
	}
}

// https://github.com/JetBrains/gradle-changelog-plugin
changelog {
	groups.empty()
	repositoryUrl = providers.gradleProperty("pluginRepositoryUrl")
	versionPrefix = ""
}

// https://kotlin.github.io/kotlinx-kover/gradle-plugin/#configuration-details
kover {
	reports {
		total {
			xml {
				onCheck = true
			}
		}
	}
}

tasks {
	wrapper {
		gradleVersion = providers.gradleProperty("gradleVersion").get()
	}

	publishPlugin {
		dependsOn(patchChangelog)
	}

	withType<Test>().configureEach {
		classpath = classpath.filter { path ->
			!path.toString().contains("vuejs")
		}
	}
}

intellijPlatformTesting {
	runIde {
		register("runIdeForUiTests") {
			task {
				jvmArgumentProviders += CommandLineArgumentProvider {
					listOf(
						"-Drobot-server.port=8082",
						"-Dide.mac.message.dialogs.as.sheets=false",
						"-Djb.privacy.policy.text=<!--999.999-->",
						"-Djb.consents.confirmation.enabled=false",
					)
				}
			}

			plugins {
				robotServerPlugin()
			}
		}
	}
}
